--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <!-- nav above medium screens -->
         <nav
-          class="flex flex-col fixed z-10 bg-[rgb(255,243,228)] top-0 left-0 w-full h-full shadow-card transition-all ease-in -translate-x-[100%] md:translate-x-0 md:shadow-none md:justify-between md:flex-row md:items-center md:h-[15vh] md:w-[70rem] md:max-w-[60%] md:left-auto md:relative"
+          class="flex flex-col fixed z-10 bg-[rgb(255,243,228)] top-0 left-0 w-full h-full shadow-card transition-all ease-in -translate-x-[100%] md:translate-x-0 md:shadow-none md:justify-between md:flex-row md:items-center md:h-[6rem] md:w-[70rem] md:max-w-[60%] md:left-auto md:relative"
           id="nav-small-screen"
         >
           <div
