--- a/profile.html
+++ b/profile.html
@@ -166,13 +166,13 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/">
+                <a href="/" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
                       alt="Company Logo"
                       loading="lazy"
-                      class="sm:hidden w-24 cursor-pointer"
+                      class="w-24"
                     />
                   </figure>
                 </a>
@@ -197,7 +197,7 @@
                         src="./utils/images/user-photo.png"
                         alt="Icon"
                         loading="lazy"
-                        class="lg:h-10 lg:w-10 h-8 w-8"
+                        class="h-10 w-10"
                       />
                     </figure>
 
@@ -220,7 +220,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -232,8 +232,8 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_blue_light text-xs lg:text-sm">
-                PairTime <span class="font-light">></span> Profile
+              <p class="text-clr_blue_light font-light text-xs lg:text-sm">
+                PairTime <span class="font-bold">></span> Profile
               </p>
               <p
                 class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-10"
@@ -308,7 +308,7 @@
                         />
                         <div class="md:w-3/7 w-full relative">
                           <select
-                            class="py-3 px-3 rounded-lg text-xs text-clr_blue_light w-full appearance-none"
+                            class="bg-white py-3 px-3 rounded-lg text-xs text-clr_blue_light w-full appearance-none"
                           >
                             <option>Asia/Karachi (currently +5:00)</option>
                             <option>Asia/Karachi (currently +5:00)</option>
