--- a/account.html
+++ b/account.html
@@ -163,16 +163,16 @@
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
           <div class="w-[95%] mx-auto">
             <div
-              class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
+              class="md:h-[5rem] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/">
+                <a href="/" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
                       alt="Company Logo"
                       loading="lazy"
-                      class="sm:hidden w-24 cursor-pointer"
+                      class="w-24"
                     />
                   </figure>
                 </a>
@@ -206,7 +206,7 @@
                       src="./utils/images/user-photo.png"
                       alt="User Photo"
                       loaindg="lazy"
-                      class="lg:h-10 lg:w-10 h-8 w-8"
+                      class="h-10 w-10"
                     />
                   </a>
                   <button class="text-clr_blue md:hidden">
@@ -219,7 +219,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -231,8 +231,8 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 pb-8">
-              <p class="text-clr_blue_light text-xs lg:text-sm">
-                PairTime <span class="font-light">></span> Account
+              <p class="text-clr_blue_light font-light text-xs lg:text-sm">
+                PairTime <span class="font-bold">></span> Account
               </p>
               <p
                 class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4"
@@ -245,7 +245,7 @@
               </p>
               <a href="create-billing.html">
                 <button
-                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-2xl hover:shadow-btn mb-14 w-full sm:w-auto"
+                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-xl hover:shadow-btn mb-10 md:mb-14 w-full sm:w-auto"
                 >
                   Create Billing Profile
                 </button>
@@ -267,7 +267,7 @@
               </p>
               <a href="donate.html">
                 <button
-                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-2xl hover:shadow-btn w-full sm:w-auto"
+                  class="bg-clr_blue text-xs lg:text-sm py-2 px-5 text-white font-semibold rounded-xl hover:shadow-btn w-full sm:w-auto"
                 >
                   Donate
                 </button>
