--- a/donate.html
+++ b/donate.html
@@ -165,16 +165,16 @@
         >
           <div class="w-[95%] mx-auto">
             <div
-              class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
+              class="md:h-[5rem] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/">
+                <a href="/" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
                       alt="Company Logo"
                       loading="lazy"
-                      class="sm:hidden w-24 cursor-pointer"
+                      class="w-24"
                     />
                   </figure>
                 </a>
@@ -208,7 +208,7 @@
                       src="./utils/images/user-photo.png"
                       alt="User Photo"
                       loaindg="lazy"
-                      class="lg:h-10 lg:w-10 h-8 w-8"
+                      class="h-10 w-10"
                     />
                   </a>
                   <button class="text-clr_blue md:hidden">
@@ -221,7 +221,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -233,9 +233,9 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_blue_light text-xs lg:text-sm">
-                PairTime <span class="font-light">></span> Account
-                <span class="font-light">></span> Donate
+              <p class="text-clr_blue_light font-light text-xs lg:text-sm">
+                PairTime <span class="font-bold">></span> Account
+                <span class="font-bold">></span> Donate
               </p>
               <p
                 class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4"
@@ -255,7 +255,7 @@
                 <div class="md:flex gap-4">
                   <div class="md:w-2/5 lg:w-1/5 w-full relative">
                     <select
-                      class="py-3 px-3 rounded-lg text-xs placeholder-primary w-full mb-3 md:mb-0"
+                      class="bg-white py-3 px-3 rounded-lg text-xs placeholder-primary w-full mb-3 md:mb-0"
                     >
                       <option value="">USD</option>
                       <option value="">CAD</option>
