--- a/live-request-field_details.html
+++ b/live-request-field_details.html
@@ -114,7 +114,7 @@
                     class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
                   ></div>
                   <button
-                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center py-3 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center lg:py-3 py-2 lg:px-4 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
                   >
                     <img
                       src="./utils/images/icon-12.svg"
@@ -166,16 +166,16 @@
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
           <div class="w-[95%] mx-auto">
             <div
-              class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
+              class="md:h-[5rem] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/">
+                <a href="/" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
                       alt="Company Logo"
                       loading="lazy"
-                      class="sm:hidden w-24 cursor-pointer"
+                      class="w-24"
                     />
                   </figure>
                 </a>
@@ -199,7 +199,7 @@
                       src="./utils/images/user-photo.png"
                       alt="User Photo"
                       loaindg="lazy"
-                      class="lg:h-10 lg:w-10 h-8 w-8"
+                      class="h-10 w-10"
                     />
                   </a>
                   <button class="text-clr_blue md:hidden">
@@ -212,7 +212,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg placeholder-primary"
+                  class="lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -224,10 +224,10 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full">
-              <p class="text-clr_blue_light text-xs lg:text-sm">
-                PairTime <span class="font-light">></span> Live Requests
-                <span class="font-light">></span> ios
-                <span class="font-light">></span> How to redirect to an external
+              <p class="text-clr_blue_light font-light text-xs lg:text-sm">
+                PairTime <span class="font-bold">></span> Live Requests
+                <span class="font-bold">></span> ios
+                <span class="font-bold">></span> How to redirect to an external
                 URL in Korolev App
               </p>
 
@@ -244,13 +244,15 @@
               ></div>
 
               <div class="request-detail-container pt-6 pb-16">
-                <div class="min-h-[70vh] flex justify-between gap-4">
+                <div class="lg:flex lg:justify-between gap-4">
                   <div
-                    class="bg-white w-4/6 px-3 py-4 flex flex-col rounded-lg"
+                    class="bg-white h-[27rem] lg:w-4/6 px-3 py-4 flex flex-col rounded-lg mb-6 lg:mb-0"
                   >
-                    <div class="flex justify-between mb-2 px-3">
+                    <div
+                      class="flex justify-between items-center gap-4 px-3 mb-3"
+                    >
                       <h4
-                        class="flex-1 text-sm text-clr_blue_light font-semibold"
+                        class="text-xs sm:text-sm text-clr_blue_light font-semibold"
                       >
                         I have tried thing like
                       </h4>
@@ -276,13 +278,15 @@
                     </p>
                   </div>
 
-                  <div class="w-2/6 flex flex-col">
-                    <div class="px-4 py-4 bg-white rounded-lg">
+                  <div class="lg:w-2/6 sm:flex sm:justify-between lg:flex-col">
+                    <div
+                      class="px-4 py-4 bg-white rounded-lg sm:w-1/2 lg:w-full"
+                    >
                       <div class="flex justify-between items-center">
                         <h3 class="text-sm font-semibold">Budget</h3>
                         <div class="relative">
                           <select
-                            class="py-3 px-3 rounded-lg text-xs text-[#191453] w-[5rem] appearance-none"
+                            class="bg-white py-3 px-3 rounded-lg text-xs text-[#191453] w-[5rem] appearance-none"
                           >
                             <option>$ USD</option>
                             <option>& EUR</option>
@@ -313,7 +317,7 @@
                     </div>
 
                     <div
-                      class="flex-1 flex flex-col px-4 gap-4 justify-center items-center"
+                      class="flex-1 flex flex-col px-4 py-6 sm:py-auto mt-4 sm:mt-auto gap-4 justify-center items-center"
                     >
                       <img
                         src="./utils/images/deselect.svg"
@@ -335,14 +339,14 @@
                   </div>
                 </div>
 
-                <div class="flex items-center pt-7">
+                <div class="md:flex md:items-center mt-10 md:mt-14">
                   <p
-                    class="text-clr_blue_light text-xl font-semibold mt-2 mb-3 flex-1"
+                    class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-3 flex-1"
                   >
                     Availability
                   </p>
-                  <div class="md:flex w-[40%] gap-2">
-                    <div class="w-[12rem]">
+                  <div class="md:flex lg:w-[36%] gap-2">
+                    <div class="w-full md:w-[10rem] mb-3 md:mb-0">
                       <input
                         placeholder="Find Time Zone"
                         class="placeholder:text-clr_gray_light placeholder:text-[11px] px-3 py-3 rounded-lg block w-full"
@@ -350,7 +354,7 @@
                     </div>
                     <div class="relative flex-1">
                       <select
-                        class="py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
+                        class="bg-white py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
                       >
                         <option>Asia/Karachi (currently +5:00)</option>
                         <option>Asia/Karachi (currently +5:00)</option>
@@ -369,10 +373,10 @@
                   class="border-bottom w-full border-b-[0.5px] opacity-60 mt-5"
                 ></div>
 
-                <div class="pt-8">
-                  <div class="schedular w-full">
+                <div class="pt-4 lg:pt-8">
+                  <div class="schedular">
                     <div
-                      class="schedular-calendar"
+                      class="schedular-calendar h-[35rem]"
                       id="schedular-calendar"
                     ></div>
                   </div>
