--- a/live-request.html
+++ b/live-request.html
@@ -110,7 +110,7 @@
                     class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
                   ></div>
                   <button
-                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center py-3 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center lg:py-3 py-2 lg:px-4 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[90%]"
                   >
                     <img
                       src="./utils/images/icon-12.svg"
@@ -165,13 +165,13 @@
               class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/">
+                <a href="/" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
                       alt="Company Logo"
                       loading="lazy"
-                      class="sm:hidden w-24 cursor-pointer"
+                      class="w-24"
                     />
                   </figure>
                 </a>
@@ -195,7 +195,7 @@
                       src="./utils/images/user-photo.png"
                       alt="User Photo"
                       loaindg="lazy"
-                      class="lg:h-10 lg:w-10 h-8 w-8"
+                      class="h-10 w-10"
                     />
                   </a>
                   <button class="text-clr_blue md:hidden">
@@ -208,7 +208,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -220,12 +220,10 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
-              <p class="text-clr_blue_light text-xs lg:text-sm">
-                PairTime <span class="font-light">></span> Live requests
+              <p class="text-clr_blue_light font-light text-xs lg:text-sm">
+                PairTime <span class="font-bold">></span> Live requests
               </p>
-              <div
-                class="flex flex-col md:flex-row justify-between items-center mt-4 md:mt-0"
-              >
+              <div class="md:flex md:justify-between items-center mt-4 md:mt-0">
                 <p
                   class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4 flex-1"
                 >
@@ -246,12 +244,14 @@
                 </div>
               </div>
 
-              <div class="border-b-[0.5px] opacity-60 mt-2 mb-6"></div>
+              <div class="border-b-[0.5px] opacity-60 mt-4 md:mt-2 mb-6"></div>
 
-              <div class="lg:w-[54.5rem] w-[90%] mx-auto flex flex-wrap gap-3">
+              <div
+                class="xl:w-[54.5rem] mx-auto flex flex-wrap justify-center xl:justify-start gap-3"
+              >
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">
                     knowledge work
@@ -263,7 +263,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">
                     group-held knowledge
@@ -275,7 +275,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">value</p>
                   <p class="text-clr_blue_light text-xs pt-2">
@@ -285,7 +285,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">
                     records
@@ -297,7 +297,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">
                     korolev
@@ -309,7 +309,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">ios</p>
                   <p class="text-clr_blue_light text-xs pt-2">
@@ -319,9 +319,9 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
-                  <p class="text-clr_blue_light text-sm font-semibold">react</p>
+                  <p class="text-clr_blue_light text-sm font-semibold">React</p>
                   <p class="text-clr_blue_light text-xs pt-2">
                     <span class="font-medium">124 </span>post
                   </p>
@@ -329,7 +329,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">
                     Objective C
@@ -341,7 +341,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">html</p>
                   <p class="text-clr_blue_light text-xs pt-2">
@@ -351,7 +351,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">Scala</p>
                   <p class="text-clr_blue_light text-xs pt-2">
@@ -361,7 +361,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">
                     interaction
@@ -373,7 +373,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">FP</p>
                   <p class="text-clr_blue_light text-xs pt-2">
@@ -383,7 +383,7 @@
 
                 <a
                   href="./live-request-field.html"
-                  class="bg-white w-[13rem] py-4 px-5 rounded-lg hover:shadow-btn"
+                  class="bg-white lg:w-[13rem] w-[10rem] py-4 px-5 rounded-lg hover:shadow-btn"
                 >
                   <p class="text-clr_blue_light text-sm font-semibold">
                     exchange
