--- a/service-profile.html
+++ b/service-profile.html
@@ -97,7 +97,7 @@
                     class="bg-clr_blue absolute top-1 -left-1 w-2 h-[80%] rounded-2xl"
                   ></div>
                   <button
-                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center py-3 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[93%]"
+                    class="nav-post bg-clr_blue text-white text-xs md:text-sm font-semibold flex items-center lg:py-3 py-2 lg:px-4 px-2 ml-3 rounded-xl gap-1 md:gap-3 hover:shadow-btn w-[93%]"
                   >
                     <img
                       src="./utils/images/icon-11.svg"
@@ -169,16 +169,16 @@
         <section class="w-full relative md:ml-[12rem] lg:ml-64 min-h-screen">
           <div class="w-[95%] mx-auto">
             <div
-              class="md:h-[12vh] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
+              class="md:h-[5rem] md:flex md:flex-row-reverse md:justify-between md:items-center md:pt-4"
             >
               <div class="flex justify-between">
-                <a href="/">
+                <a href="/" class="md:hidden">
                   <figure class="w-full md:px-5 py-6">
                     <img
                       src="./utils/images/pair-time.svg"
                       alt="Company Logo"
                       loading="lazy"
-                      class="sm:hidden w-24 cursor-pointer"
+                      class="w-24"
                     />
                   </figure>
                 </a>
@@ -212,7 +212,7 @@
                       src="./utils/images/user-photo.png"
                       alt="User Photo"
                       loaindg="lazy"
-                      class="lg:h-10 lg:w-10 h-8 w-8"
+                      class="h-10 w-10"
                     />
                   </a>
                   <button class="text-clr_blue md:hidden">
@@ -225,7 +225,7 @@
                 <input
                   type="text"
                   placeholder="Search Anything"
-                  class="sm:w-56 lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
+                  class="lg:w-72 w-full pl-9 pr-2 py-3 text-xs rounded-lg border-none outline-none placeholder-primary"
                 />
                 <img
                   src="./utils/images/search.svg"
@@ -237,8 +237,8 @@
             </div>
 
             <div class="center pt-5 lg:pt-2 h-full">
-              <p class="text-clr_blue_light text-xs lg:text-sm">
-                PairTime <span class="font-light">></span> Service Profile
+              <p class="text-clr_blue_light font-light text-xs lg:text-sm">
+                PairTime <span class="font-bold">></span> Service Profile
               </p>
 
               <div class="mb-6">
@@ -257,7 +257,9 @@
               ></div>
               <div class="create-post-form pt-6 pb-16">
                 <div class="mb-8">
-                  <p class="text-clr_blue_light text-base font-semibold">
+                  <p
+                    class="text-clr_blue_light text-sm lg:text-base font-semibold"
+                  >
                     Visibility & Approachability
                   </p>
                   <fieldset class="mt-6 ml-0 md:ml-7">
@@ -269,7 +271,7 @@
                         value="track"
                         name="User Bio"
                       /><label
-                        class="text-clr_blue_light text-xs font-semibold ml-2"
+                        class="text-clr_blue_light text-xs font-medium md:font-semibold ml-2"
                         for="track"
                         >Allow your user name and bio to be found by other users
                         via searching and browsing. Your hourly rates will be
@@ -284,7 +286,7 @@
                         value="event"
                         name="User Bio"
                       /><label
-                        class="text-clr_blue_light text-xs font-semibold ml-2"
+                        class="text-clr_blue_light text-xs font-medium md:font-semibold ml-2"
                         for="event"
                         >Allow other users to send you direct messages. This
                         only works when you allow your user name and bio to be
@@ -294,14 +296,14 @@
                   </fieldset>
                 </div>
 
-                <div class="flex items-center pt-7">
+                <div class="md:flex items-center pt-2 md:pt-7">
                   <p
-                    class="text-clr_blue_light text-xl font-semibold mt-2 mb-3 flex-1"
+                    class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-3 flex-1"
                   >
                     Availability
                   </p>
-                  <div class="md:flex w-[36%] gap-2">
-                    <div class="w-[9rem]">
+                  <div class="md:flex lg:w-[36%] gap-2">
+                    <div class="w-full md:w-[9rem] mb-3 md:mb-0">
                       <input
                         placeholder="Find Time Zone"
                         class="placeholder:text-clr_gray_light placeholder:text-[11px] px-3 py-3 rounded-lg block w-full"
@@ -309,7 +311,7 @@
                     </div>
                     <div class="relative flex-1">
                       <select
-                        class="py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
+                        class="bg-white py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
                       >
                         <option>Asia/Karachi (currently +5:00)</option>
                         <option>Asia/Karachi (currently +5:00)</option>
@@ -328,26 +330,27 @@
                   class="border-bottom w-full border-b-[0.5px] opacity-60 mt-5"
                 ></div>
 
-                <div class="flex flex-col md:flex-row justify-between pt-8">
-                  <div class="schedular w-full md:w-[61%]">
+                <div class="xl:flex xl:justify-between pt-5 lg:pt-8">
+                  <div class="schedular w-full xl:w-[61%]">
                     <div
-                      class="schedular-calendar"
+                      class="schedular-calendar h-full"
                       id="schedular-calendar"
                     ></div>
+                    <!-- <Calendar {plugins} {options} /> -->
                   </div>
 
-                  <div class="right-side w-full md:w-[36%] pt-2">
+                  <div class="right-side w-full xl:w-[36%] pt-2">
                     <p
-                      class="text-clr_blue_light text-xs font-semibold leading-6 mt-3"
+                      class="text-clr_blue_light text-xs font-semibold leading-6 mt-7 lg:mt-3"
                     >
                       You can make changes by interacting with the graphic
                       interface on the left side.
                     </p>
                     <ul class="list-disc pt-2 ml-6 capitalize">
-                      <li class="text-clr_blue_light opacity-70 text-xs">
+                      <li class="text-clr_blue_light opacity-70 mb-2 text-xs">
                         Click on the calendar to create a slot.
                       </li>
-                      <li class="text-clr_blue_light opacity-70 text-xs">
+                      <li class="text-clr_blue_light opacity-70 mb-2 text-xs">
                         To delete a slot, press the Delete key or the Backspace
                         key.
                       </li>
@@ -357,7 +360,7 @@
                     </ul>
 
                     <div
-                      class="time-slot mt-4 bg-[#FFFFFF] px-6 py-5 rounded-lg"
+                      class="time-slot mt-4 bg-[#FFFFFF] md:px-6 px-[3%] py-5 rounded-lg"
                     >
                       <p class="text-clr_blue_light text-sm font-semibold pb-5">
                         Selected time slot
@@ -367,7 +370,7 @@
                         class="border-bottom w-full border-b-[0.5px] opacity-60"
                       ></div>
 
-                      <div class="flex justify-between pt-6 gap-5">
+                      <div class="flex justify-between pt-6 md:gap-5 gap-2">
                         <div class="flex-1">
                           <p
                             class="text-clr_blue_light text-xs font-semibold mb-4"
@@ -383,7 +386,9 @@
                           >
                             Start Time:
                           </p>
-                          <div class="relative w-[9rem] shadow-input_two">
+                          <div
+                            class="relative w-[8rem] md:w-[9rem] shadow-input"
+                          >
                             <input
                               type="text"
                               placeholder="1 : 45 AM"
@@ -412,7 +417,9 @@
                           >
                             Start Time:
                           </p>
-                          <div class="relative w-[9rem] shadow-input_two">
+                          <div
+                            class="relative w-[8rem] md:w-[9rem] shadow-input"
+                          >
                             <input
                               type="text"
                               placeholder="1 : 45 AM"
@@ -429,7 +436,7 @@
                     </div>
 
                     <div
-                      class="time-slot mt-5 bg-[#FFFFFF] px-5 py-6 rounded-lg"
+                      class="time-slot mt-5 bg-[#FFFFFF] md:px-6 px-[3%] py-6 rounded-lg"
                     >
                       <p class="text-clr_blue_light text-sm font-semibold mb-5">
                         Add recurring rule
@@ -448,7 +455,7 @@
                             class="relative shadow-input border border-[#f7f8fb] rounded-lg"
                           >
                             <select
-                              class="py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
+                              class="bg-white py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
                             >
                               <option>Every Day</option>
                               <option>Monday</option>
@@ -480,7 +487,7 @@
                               class="relative shadow-input w-[5rem]"
                             >
                               <select
-                                class="py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
+                                class="bg-white py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
                               >
                                 <option>Option</option>
                                 <option>Tom</option>
@@ -509,7 +516,7 @@
                               class="relative shadow-input flex-1"
                             >
                               <select
-                                class="py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
+                                class="bg-white py-[15.5px] px-3 rounded-lg text-[11px] text-clr_blue_light w-full appearance-none"
                               >
                                 <option>Every</option>
                                 <option>Monday</option>
@@ -549,8 +556,8 @@
                   >
                 </div>
 
-                <div class="flex flex-col md:flex-row justify-between mt-8">
-                  <div class="w-full md:w-[48%]">
+                <div class="lg:flex lg:justify-between mt-8">
+                  <div class="w-full lg:w-[48%]">
                     <div>
                       <p
                         class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 pb-2 flex-1"
@@ -601,7 +608,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="w-full md:w-[48%] mt-2 md:mt-0">
+                  <div class="w-full lg:w-[48%] mt-8 lg:mt-0">
                     <div>
                       <p
                         class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 pb-2 flex-1"
@@ -627,19 +634,16 @@
                             >
                           </div>
                         </div>
+
                         <div class="mt-6">
                           <p
                             class="text-clr_blue_light text-xs font-semibold pb-2"
                           >
                             Hourly rate
                           </p>
-                          <div class="flex justify-between gap-3">
+                          <div class="md:flex md:justify-between gap-3">
                             <div
-                              style="
-                                border: 1px solid #f7f8fb;
-                                border-radius: 10px;
-                              "
-                              class="relative shadow-input_two"
+                              class="relative shadow-input_two rounded-lg mb-2"
                             >
                               <select
                                 class="block appearance-none w-full bg-white text-gray-700 text-xs px-3 py-4 pr-8 rounded-lg leading-tight"
@@ -652,7 +656,7 @@
                                 class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-clr_gray_light"
                               >
                                 <span
-                                  class="drop-icon absolute right-[2%] top-[17%] bg-white px-3 pointer-events-none"
+                                  class="drop-icon absolute right-[2%] top-[17%] bg-white px-2 pointer-events-none"
                                 >
                                   <i class="fas fa-sort-down text-sm"></i>
                                 </span>
@@ -667,7 +671,7 @@
                                 </svg> -->
                               </div>
                             </div>
-                            <div class="w-[58%]">
+                            <div class="w-full md:w-[58%] mb-2">
                               <input
                                 type="text"
                                 placeholder="Your hourly rate"
@@ -676,7 +680,7 @@
                             </div>
                             <div>
                               <button
-                                class="bg-clr_blue text-sm py-3 px-3 min-w-max text-white rounded-lg hover:shadow-btn font-semibold"
+                                class="bg-clr_blue text-sm py-[14px] px-3 min-w-max text-white rounded-lg hover:shadow-btn font-semibold w-full md:w-auto"
                               >
                                 <a> Add to profile </a>
                               </button>
@@ -692,6 +696,7 @@
                         class="radio-style"
                         id="Duration_Preferences"
                         value="Duration Preferences"
+                        checked
                       /><label
                         class="text-clr_blue_light text-xs font-semibold ml-2"
                         for="Duration_Preferences"
@@ -701,7 +706,7 @@
                   </div>
                 </div>
 
-                <div class="w-full md:w-[48%] pt-10">
+                <div class="w-full lg:w-[48%] pt-10">
                   <div>
                     <p
                       class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-3 flex-1"
@@ -729,9 +734,9 @@
                         match your availability and preferences.
                       </p>
                     </div>
-                    <div class="flex justify-end mt-10">
+                    <div class="text-center lg:text-right mt-10">
                       <button
-                        class="bg-clr_blue text-sm py-3 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
+                        class="w-full md:w-auto bg-clr_blue text-sm py-3 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
                       >
                         Submit
                       </button>
